# MicrophoneInput

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/kjipo/com/microphoneinput/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ByteBufferOutput.cpp  ByteBufferOutput.h  CallbackWriter.cpp  CallbackWriter.h  ColourWheel.cpp  ColourWheel.h  DataTransfer.cpp  DataTransfer.h  FileDescriptorOutputSingle.h  FileDescriptorVectorOutput.cpp  LoggerOutputVector.cpp  LoggerOutputVector.h  MfccAnalysis.cpp  MfccAnalysis.h  MicrophoneInput.cpp  MicrophoneInput.h  Recorder.cpp  Recorder.h  colourwheel-lib.cpp  mfcc-lib.cpp  native-lib.cpp
app/src/main/java/com/kjipo/microphoneinput/: ColourWheel.kt  ColourWheelModel.kt  ColourWheelRenderer.kt  MainActivity.kt  MicrophoneRecording.java
app/src/main/java/com/kjipo/microphoneinput/colourwheel/: ColourWheel.kt  ColourWheelActivity.kt  ColourWheelModel.kt
app/src/main/java/com/kjipo/microphoneinput/mfcc/: DataReceiver.kt  DataTransfer.kt  MfccActivity.kt  MfccLibrary.kt  SpectrumGraph.kt  SpectrumGraphModel.kt
app/src/main/res/layout/: activity_colour_wheel2.xml  activity_main.xml  activity_mfcc.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kjipo/microphoneinput/: ColourWheelTest.kt
app/src/test/java/kjipo/com/microphoneinput/: ExampleUnitTest.java
